--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,36 @@
     height: 560px;
     margin: 8px 0 0 440px;
     float: left;
+    display: flex;
+    flex-wrap: wrap;
 }
+
+.board > div {
+    width: 12.5%;
+    height: 12.5%;
+    box-sizing: border-box;
+    padding: 10px;
+    border: 1px solid black;
+}
+
+.blue-piece {
+    height: 100%;
+    width: 100%;
+    background-color: #4169E1;
+    border-radius: 50%;
+}
+
+.gold-piece {
+    height: 100%;
+    width: 100%;
+    background-color: #DAA520;
+    border-radius: 50%;
+}
+
 .black-board{
     background-color: black;
     float: left;
     color: white;
-    
 }
 .white-board{
     background-color: white;
@@ -45,14 +69,14 @@
     grid-auto-rows: 100px;
     float: left;
     margin: 110px 0 0 80px;
- }
- button{
-     width: 15s0px;
-     height: 35px;
-     text-align: center;
-     background-color: black;
-     margin-top: 20px;
- }
+}
+button{
+    width: 15s0px;
+    height: 35px;
+    text-align: center;
+    background-color: black;
+    margin-top: 20px;
+}
 h4{
     color: white;
     width: 120px;
@@ -67,7 +91,7 @@ h4{
 .gold-peg{
     width: 50px;
     height: 50px;  
-    background-color: #DAA520  ;
+    background-color: #DAA520;
     border-radius: 50%;
     margin: 10px auto;
 }
