--- a/css/main.css
+++ b/css/main.css
@@ -20,20 +20,20 @@
     width: 12.5%;
     height: 12.5%;
     box-sizing: border-box;
-    padding: 10px;
-    border: 1px solid black;
 }
 
 .blue-piece {
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
+    margin: 10%;
     background-color: #4169E1;
     border-radius: 50%;
 }
 
 .gold-piece {
-    height: 100%;
-    width: 100%;
+    height: 80%;
+    width: 80%;
+    margin: 10%;
     background-color: #DAA520;
     border-radius: 50%;
 }
