--- a/css/main.css
+++ b/css/main.css
@@ -1,102 +1,116 @@
-*{
+* {
     box-sizing: border-box;
     background-color: darkslategray;
     font-family: 'Crimson Text', serif;
 }
-* div{
+
+* div {
     width: 70px;
-    height: 70px;  
+    height: 70px;
 }
+
 .board {
     width: 560px;
     height: 560px;
     margin: 8px 0 0 440px;
     float: left;
 }
-.black-board{
+
+.black-board {
     background-color: black;
     float: left;
     color: white;
-    
 }
-.white-board{
+
+.white-board {
     background-color: white;
     float: left;
     color: black;
 }
-.player1{
-    grid-column: 1 ;
+
+.player1 {
+    grid-column: 1;
     grid-row: 1/3;
     width: 140px;
 }
- .button{
+
+.button {
     grid-column: 1;
     grid-row: 2 / 3;
     width: 140px;
- }
- .player2{
+}
+
+.player2 {
     grid-column: 1;
     grid-row: 3 / 3;
-    width: 140px;  
- }
- .wrapper {
+    width: 140px;
+}
+
+.wrapper {
     display: grid;
     grid-gap: 40px;
     grid-auto-rows: 100px;
     float: left;
     margin: 110px 0 0 80px;
- }
- button{
-     width: 15s0px;
-     height: 35px;
-     text-align: center;
-     background-color: black;
-     margin-top: 20px;
- }
-h4{
+}
+
+button {
+    width: 15s0px;
+    height: 35px;
+    text-align: center;
+    background-color: black;
+    margin-top: 20px;
+}
+
+h4 {
     color: white;
     width: 120px;
 }
-.blue-peg{
+
+.blue-peg {
     width: 50px;
-    height: 50px;  
+    height: 50px;
     background-color: #4169E1;
     border-radius: 50%;
     margin: 10px auto;
 }
-.gold-peg{
-    width: 50px;
-    height: 50px;  
-    background-color: #DAA520  ;
-    border-radius: 50%;
-    margin: 10px auto;
-}
-.empty{
-    width: 50px;
-    height: 50px;  
-    background-color:black;
-    border-radius: 50%;
-    margin: 10px auto;
 
+.gold-peg {
+    width: 50px;
+    height: 50px;
+    background-color: #DAA520;
+    border-radius: 50%;
+    margin: 10px auto;
 }
-h2, h3{
+
+.empty {
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    border-radius: 50%;
+    margin: 10px auto;
+}
+
+h2,
+h3 {
     text-align: center;
     color: white;
     background-color: darkslategray;
 }
 
-.selected-peg-blue{
+.selected-peg-blue {
     width: 50px;
-    height: 50px;  
+    height: 50px;
     background-color: #4169E1;
     border: solid #B22222 3px;
     border-radius: 50%;
     margin: 10px auto;
 }
-.selected-peg-gold{
+
+.selected-peg-gold {
     width: 50px;
-    height: 50px;  
-    background-color:#DAA520;
+    height: 50px;
+    background-color: #DAA520;
     border: solid #B22222 3px;
     border-radius: 50%;
     margin: 10px auto;
