restore index.html

--- a/css/main.css
+++ b/css/main.css
@@ -81,28 +81,28 @@ h4{
     color: white;
     width: 120px;
 }
-.blue-peg{
+/* .blue-peg{
     width: 50px;
     height: 50px;  
     background-color: #4169E1;
     border-radius: 50%;
     margin: 10px auto;
-}
-.gold-peg{
+} */
+/* .gold-peg{
     width: 50px;
     height: 50px;  
     background-color: #DAA520;
     border-radius: 50%;
     margin: 10px auto;
-}
-.empty{
+} */
+/* .empty{
     width: 50px;
     height: 50px;  
     background-color:black;
     border-radius: 50%;
     margin: 10px auto;
 
-}
+} */
 h2, h3{
     text-align: center;
     color: white;
