--- a/css/main.css
+++ b/css/main.css
@@ -38,16 +38,22 @@
     border-radius: 50%;
 }
 
-.black-board{
+.black-tile{
     background-color: black;
     float: left;
     color: white;
 }
-.white-board{
+.white-tile{
     background-color: white;
     float: left;
     color: black;
 }
+
+.blue-score, .gold-score {
+    color: red;
+    font-size: 24px;
+}
+
 .player1{
     grid-column: 1 ;
     grid-row: 1/3;
@@ -81,47 +87,9 @@ h4{
     color: white;
     width: 120px;
 }
-.blue-peg{
-    width: 50px;
-    height: 50px;  
-    background-color: #4169E1;
-    border-radius: 50%;
-    margin: 10px auto;
-}
-.gold-peg{
-    width: 50px;
-    height: 50px;  
-    background-color: #DAA520;
-    border-radius: 50%;
-    margin: 10px auto;
-}
-.empty{
-    width: 50px;
-    height: 50px;  
-    background-color:black;
-    border-radius: 50%;
-    margin: 10px auto;
 
-}
 h2, h3{
     text-align: center;
     color: white;
     background-color: darkslategray;
-}
-
-.selected-peg-blue{
-    width: 50px;
-    height: 50px;  
-    background-color: #4169E1;
-    border: solid #B22222 3px;
-    border-radius: 50%;
-    margin: 10px auto;
-}
-.selected-peg-gold{
-    width: 50px;
-    height: 50px;  
-    background-color:#DAA520;
-    border: solid #B22222 3px;
-    border-radius: 50%;
-    margin: 10px auto;
 }
